Fix layout bug on widescreens

--- a/public/src/less/style.less
+++ b/public/src/less/style.less
@@ -267,5 +267,9 @@ textarea {
 	.button {
 		margin: 0 0 1em;
 		text-align: left;
+
+		@media only screen and (min-width: 30em) {
+			margin: 0;
+		}
 	}
 }
